# rijndael

./: .gitignore  README.md  checksum-Elixir.Rijndael.exs  mix.exs
.github/workflows/: release.yml
lib/: rijndael.ex
native/rijndael/: Cargo.toml  README.md
native/rijndael/src/: lib.rs
test/: rijndael_test.exs
